--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -28,6 +28,13 @@ DOMAIN,googleads.g.doubleclick.net,REJECT-DROP
 URL-REGEX,https://app.c.nf.migu.cn/MIGUM3.0/column/start-up-pic/v1.0,REJECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Advertising/Advertising.list,REJECT
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Advertising/Advertising_Domain.list,REJECT
+IP-CIDR,17.0.0.0/8,PROXY
+DOMAIN-KEYWORD,apple,PROXY
+DOMAIN-KEYWORD,icloud,PROXY
+DOMAIN-KEYWORD,itunes,PROXY
+DOMAIN,me.com,PROXY
+DOMAIN,appsto.re,PROXY
+DOMAIN,appstore.com,PROXY
 GEOIP,CN,DIRECT
 FINAL,PROXY
 
