--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -34,9 +34,9 @@ IP-CIDR,17.0.0.0/8,PROXY
 DOMAIN-KEYWORD,apple,PROXY
 DOMAIN-KEYWORD,icloud,PROXY
 DOMAIN-KEYWORD,itunes,PROXY
-DOMAIN,me.com,PROXY
-DOMAIN,appsto.re,PROXY
-DOMAIN,appstore.com,PROXY
+DOMAIN-SUFFIX,me.com,PROXY
+DOMAIN-SUFFIX,appsto.re,PROXY
+DOMAIN-SUFFIX,appstore.com,PROXY
 GEOIP,CN,DIRECT
 FINAL,PROXY
 
