--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -13,7 +13,7 @@ update-url = https://raw.githubusercontent.com/JOJOforshaun/Shadowrocket_rules/m
 [Rule]
 DST-PORT,22101,DIRECT
 DST-PORT,22102,DIRECT
-DOMAIN-KEYWORD,hoyolab,PROXY
+DOMAIN-SUFFIX,hoyolab.com,PROXY
 DOMAIN,hybrid-analysis.com,PROXY
 URL-REGEX,https:\/\/app\.c\.nf\.migu\.cn\/MIGUM3\.0\/column\/start-up-pic\/v1\.0,REJECT-DROP
 DOMAIN,118.89.204.198,REJECT
